--- a/OTC_USD_IDR/Untitled-1.ipynb
+++ b/OTC_USD_IDR/Untitled-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,60 +51,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-01-01 00:00:00+00:00</td>\n",
-       "      <td>108.680000</td>\n",
-       "      <td>111.410004</td>\n",
-       "      <td>108.629997</td>\n",
-       "      <td>108.681000</td>\n",
+       "      <td>2024-10-28 00:00:00+00:00</td>\n",
+       "      <td>152.951996</td>\n",
+       "      <td>153.867996</td>\n",
+       "      <td>152.421005</td>\n",
+       "      <td>152.951996</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-01-02 00:00:00+00:00</td>\n",
-       "      <td>108.713997</td>\n",
-       "      <td>108.860001</td>\n",
-       "      <td>108.221001</td>\n",
-       "      <td>108.712997</td>\n",
+       "      <td>2024-10-29 00:00:00+00:00</td>\n",
+       "      <td>153.179001</td>\n",
+       "      <td>153.839996</td>\n",
+       "      <td>152.768005</td>\n",
+       "      <td>153.179001</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-01-03 00:00:00+00:00</td>\n",
-       "      <td>108.540001</td>\n",
-       "      <td>108.551003</td>\n",
-       "      <td>107.915001</td>\n",
-       "      <td>108.542999</td>\n",
+       "      <td>2024-10-30 00:00:00+00:00</td>\n",
+       "      <td>153.274002</td>\n",
+       "      <td>153.472000</td>\n",
+       "      <td>152.800003</td>\n",
+       "      <td>153.274002</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-01-06 00:00:00+00:00</td>\n",
-       "      <td>107.999001</td>\n",
-       "      <td>108.410004</td>\n",
-       "      <td>107.921997</td>\n",
-       "      <td>107.963997</td>\n",
+       "      <td>2024-10-31 00:00:00+00:00</td>\n",
+       "      <td>153.203995</td>\n",
+       "      <td>153.556000</td>\n",
+       "      <td>151.921997</td>\n",
+       "      <td>153.203995</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-01-07 00:00:00+00:00</td>\n",
-       "      <td>108.411003</td>\n",
-       "      <td>108.616997</td>\n",
-       "      <td>108.261002</td>\n",
-       "      <td>108.405998</td>\n",
+       "      <td>2024-11-01 00:00:00+00:00</td>\n",
+       "      <td>151.979996</td>\n",
+       "      <td>153.001999</td>\n",
+       "      <td>151.835007</td>\n",
+       "      <td>151.979996</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1263</th>\n",
+       "      <th>5</th>\n",
        "      <td>2024-11-04 00:00:00+00:00</td>\n",
        "      <td>152.287003</td>\n",
        "      <td>152.285004</td>\n",
@@ -113,7 +104,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1264</th>\n",
+       "      <th>6</th>\n",
        "      <td>2024-11-05 00:00:00+00:00</td>\n",
        "      <td>152.276001</td>\n",
        "      <td>152.531006</td>\n",
@@ -122,7 +113,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1265</th>\n",
+       "      <th>7</th>\n",
        "      <td>2024-11-06 00:00:00+00:00</td>\n",
        "      <td>151.434998</td>\n",
        "      <td>154.649994</td>\n",
@@ -131,7 +122,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1266</th>\n",
+       "      <th>8</th>\n",
        "      <td>2024-11-07 00:00:00+00:00</td>\n",
        "      <td>154.320007</td>\n",
        "      <td>154.701996</td>\n",
@@ -140,7 +131,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1267</th>\n",
+       "      <th>9</th>\n",
        "      <td>2024-11-08 00:00:00+00:00</td>\n",
        "      <td>153.179993</td>\n",
        "      <td>153.352997</td>\n",
@@ -148,42 +139,48 @@
        "      <td>153.179993</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2024-11-11 00:00:00+00:00</td>\n",
+       "      <td>152.904007</td>\n",
+       "      <td>153.944000</td>\n",
+       "      <td>152.869995</td>\n",
+       "      <td>152.904007</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1268 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          date        open        high         low  \\\n",
-       "0    2020-01-01 00:00:00+00:00  108.680000  111.410004  108.629997   \n",
-       "1    2020-01-02 00:00:00+00:00  108.713997  108.860001  108.221001   \n",
-       "2    2020-01-03 00:00:00+00:00  108.540001  108.551003  107.915001   \n",
-       "3    2020-01-06 00:00:00+00:00  107.999001  108.410004  107.921997   \n",
-       "4    2020-01-07 00:00:00+00:00  108.411003  108.616997  108.261002   \n",
-       "...                        ...         ...         ...         ...   \n",
-       "1263 2024-11-04 00:00:00+00:00  152.287003  152.285004  151.550995   \n",
-       "1264 2024-11-05 00:00:00+00:00  152.276001  152.531006  151.796005   \n",
-       "1265 2024-11-06 00:00:00+00:00  151.434998  154.649994  151.343002   \n",
-       "1266 2024-11-07 00:00:00+00:00  154.320007  154.701996  152.860992   \n",
-       "1267 2024-11-08 00:00:00+00:00  153.179993  153.352997  152.171005   \n",
+       "                        date        open        high         low       close  \\\n",
+       "0  2024-10-28 00:00:00+00:00  152.951996  153.867996  152.421005  152.951996   \n",
+       "1  2024-10-29 00:00:00+00:00  153.179001  153.839996  152.768005  153.179001   \n",
+       "2  2024-10-30 00:00:00+00:00  153.274002  153.472000  152.800003  153.274002   \n",
+       "3  2024-10-31 00:00:00+00:00  153.203995  153.556000  151.921997  153.203995   \n",
+       "4  2024-11-01 00:00:00+00:00  151.979996  153.001999  151.835007  151.979996   \n",
+       "5  2024-11-04 00:00:00+00:00  152.287003  152.285004  151.550995  152.287003   \n",
+       "6  2024-11-05 00:00:00+00:00  152.276001  152.531006  151.796005  152.276001   \n",
+       "7  2024-11-06 00:00:00+00:00  151.434998  154.649994  151.343002  151.434998   \n",
+       "8  2024-11-07 00:00:00+00:00  154.320007  154.701996  152.860992  154.320007   \n",
+       "9  2024-11-08 00:00:00+00:00  153.179993  153.352997  152.171005  153.179993   \n",
+       "10 2024-11-11 00:00:00+00:00  152.904007  153.944000  152.869995  152.904007   \n",
        "\n",
-       "           close  volume  \n",
-       "0     108.681000       0  \n",
-       "1     108.712997       0  \n",
-       "2     108.542999       0  \n",
-       "3     107.963997       0  \n",
-       "4     108.405998       0  \n",
-       "...          ...     ...  \n",
-       "1263  152.287003       0  \n",
-       "1264  152.276001       0  \n",
-       "1265  151.434998       0  \n",
-       "1266  154.320007       0  \n",
-       "1267  153.179993       0  \n",
-       "\n",
-       "[1268 rows x 6 columns]"
+       "    volume  \n",
+       "0        0  \n",
+       "1        0  \n",
+       "2        0  \n",
+       "3        0  \n",
+       "4        0  \n",
+       "5        0  \n",
+       "6        0  \n",
+       "7        0  \n",
+       "8        0  \n",
+       "9        0  \n",
+       "10       0  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +204,7 @@
     "# Get today's date\n",
     "end_date = datetime.datetime.today().strftime('%Y-%m-%d')\n",
     "\n",
-    "yahoo_data = yf.download(ticker, start=\"2020-01-01\", end=end_date, interval=interval)\n",
+    "yahoo_data = yf.download(ticker, start=\"2024-10-27\", end=end_date, interval=interval)\n",
     "\n",
     "# Reset index to turn 'date' from index into a column\n",
     "yahoo_df = yahoo_data.reset_index()\n",
