--- a/u1.ipynb
+++ b/u1.ipynb
@@ -1268,9 +1268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Window size 1000 | Time Elapsed: 2225.794 seconds\n",
+      "Average Training RMSE: 0.1218, Training Variance RMSE: 0.0023\n",
+      "Average Validation RMSE: 0.0867, Validation Variance RMSE: 0.0134\n",
+      "\n",
+      "Summary of RMSE Results for Each Window Size:\n",
+      "   window_size  avg_val_rmse  var_val_rmse  avg_val_rmse_perc  \\\n",
+      "0         1000      0.086675      0.013386           0.079682   \n",
+      "\n",
+      "   var_val_rmse_perc  avg_train_rmse  var_train_rmse  avg_train_rmse_perc  \\\n",
+      "0           0.010734        0.121797         0.00234             0.112008   \n",
+      "\n",
+      "   var_train_rmse_perc  window_time  \n",
+      "0             0.001438  2225.794142  \n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
