--- a/02_NEAR_USDT/02_base_model.ipynb
+++ b/02_NEAR_USDT/02_base_model.ipynb
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2417,7 @@
        "[36461 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2484,8 +2484,8 @@
        "      <td>9968</td>\n",
        "      <td>766784</td>\n",
        "      <td>8.779915e+05</td>\n",
-       "      <td>0.105037</td>\n",
-       "      <td>0.042948</td>\n",
+       "      <td>0.117365</td>\n",
+       "      <td>0.045121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2499,8 +2499,8 @@
        "      <td>8743</td>\n",
        "      <td>873713</td>\n",
        "      <td>9.684362e+05</td>\n",
-       "      <td>0.046279</td>\n",
-       "      <td>0.040067</td>\n",
+       "      <td>0.048525</td>\n",
+       "      <td>0.042047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2514,8 +2514,8 @@
        "      <td>8310</td>\n",
        "      <td>721173</td>\n",
        "      <td>8.190750e+05</td>\n",
-       "      <td>0.044120</td>\n",
-       "      <td>0.037814</td>\n",
+       "      <td>0.046157</td>\n",
+       "      <td>0.039637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2529,8 +2529,8 @@
        "      <td>4446</td>\n",
        "      <td>227307</td>\n",
        "      <td>2.600841e+05</td>\n",
-       "      <td>0.031533</td>\n",
-       "      <td>0.036343</td>\n",
+       "      <td>0.032560</td>\n",
+       "      <td>0.038093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2544,8 +2544,8 @@
        "      <td>9266</td>\n",
        "      <td>934671</td>\n",
        "      <td>1.074642e+06</td>\n",
-       "      <td>0.066627</td>\n",
-       "      <td>0.031668</td>\n",
+       "      <td>0.071383</td>\n",
+       "      <td>0.032983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2574,8 +2574,8 @@
        "      <td>14640</td>\n",
        "      <td>349725</td>\n",
        "      <td>2.405712e+06</td>\n",
-       "      <td>0.008833</td>\n",
-       "      <td>0.016799</td>\n",
+       "      <td>0.008912</td>\n",
+       "      <td>0.017125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36447</th>\n",
@@ -2589,8 +2589,8 @@
        "      <td>15168</td>\n",
        "      <td>279329</td>\n",
        "      <td>1.917813e+06</td>\n",
-       "      <td>0.011299</td>\n",
-       "      <td>0.016694</td>\n",
+       "      <td>0.011429</td>\n",
+       "      <td>0.017017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36448</th>\n",
@@ -2604,8 +2604,8 @@
        "      <td>32331</td>\n",
        "      <td>604490</td>\n",
        "      <td>4.129761e+06</td>\n",
-       "      <td>0.014975</td>\n",
-       "      <td>0.017083</td>\n",
+       "      <td>0.015203</td>\n",
+       "      <td>0.017420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36449</th>\n",
@@ -2619,8 +2619,8 @@
        "      <td>28296</td>\n",
        "      <td>680113</td>\n",
        "      <td>4.655383e+06</td>\n",
-       "      <td>0.017381</td>\n",
-       "      <td>0.016848</td>\n",
+       "      <td>0.017689</td>\n",
+       "      <td>0.017177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36450</th>\n",
@@ -2634,8 +2634,8 @@
        "      <td>31226</td>\n",
        "      <td>968551</td>\n",
        "      <td>6.728746e+06</td>\n",
-       "      <td>0.031974</td>\n",
-       "      <td>0.015100</td>\n",
+       "      <td>0.033030</td>\n",
+       "      <td>0.015344</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2657,41 +2657,41 @@
        "36450  1733968800000     6.8140     7.0370    6.8120      7.0230  1657942   \n",
        "\n",
        "        quotevolume  trades  taker_buy_volume  taker_buy_quote  volatility  \\\n",
-       "0      1.655530e+06    9968            766784     8.779915e+05    0.105037   \n",
-       "1      1.789316e+06    8743            873713     9.684362e+05    0.046279   \n",
-       "2      1.441663e+06    8310            721173     8.190750e+05    0.044120   \n",
-       "3      5.503787e+05    4446            227307     2.600841e+05    0.031533   \n",
-       "4      2.107977e+06    9266            934671     1.074642e+06    0.066627   \n",
+       "0      1.655530e+06    9968            766784     8.779915e+05    0.117365   \n",
+       "1      1.789316e+06    8743            873713     9.684362e+05    0.048525   \n",
+       "2      1.441663e+06    8310            721173     8.190750e+05    0.046157   \n",
+       "3      5.503787e+05    4446            227307     2.600841e+05    0.032560   \n",
+       "4      2.107977e+06    9266            934671     1.074642e+06    0.071383   \n",
        "...             ...     ...               ...              ...         ...   \n",
-       "36446  6.464904e+06   14640            349725     2.405712e+06    0.008833   \n",
-       "36447  4.070402e+06   15168            279329     1.917813e+06    0.011299   \n",
-       "36448  9.753268e+06   32331            604490     4.129761e+06    0.014975   \n",
-       "36449  8.472227e+06   28296            680113     4.655383e+06    0.017381   \n",
-       "36450  1.151282e+07   31226            968551     6.728746e+06    0.031974   \n",
+       "36446  6.464904e+06   14640            349725     2.405712e+06    0.008912   \n",
+       "36447  4.070402e+06   15168            279329     1.917813e+06    0.011429   \n",
+       "36448  9.753268e+06   32331            604490     4.129761e+06    0.015203   \n",
+       "36449  8.472227e+06   28296            680113     4.655383e+06    0.017689   \n",
+       "36450  1.151282e+07   31226            968551     6.728746e+06    0.033030   \n",
        "\n",
        "       next_10h_avg_volatility  \n",
-       "0                     0.042948  \n",
-       "1                     0.040067  \n",
-       "2                     0.037814  \n",
-       "3                     0.036343  \n",
-       "4                     0.031668  \n",
+       "0                     0.045121  \n",
+       "1                     0.042047  \n",
+       "2                     0.039637  \n",
+       "3                     0.038093  \n",
+       "4                     0.032983  \n",
        "...                        ...  \n",
-       "36446                 0.016799  \n",
-       "36447                 0.016694  \n",
-       "36448                 0.017083  \n",
-       "36449                 0.016848  \n",
-       "36450                 0.015100  \n",
+       "36446                 0.017125  \n",
+       "36447                 0.017017  \n",
+       "36448                 0.017420  \n",
+       "36449                 0.017177  \n",
+       "36450                 0.015344  \n",
        "\n",
        "[36451 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_m['volatility'] = (df_m['highprice'] - df_m['lowprice']) / df_m['highprice']\n",
+    "df_m['volatility'] = (df_m['highprice'] - df_m['lowprice']) / df_m['lowprice']\n",
     "\n",
     "# Initialize the new column with zeros or NaN\n",
     "df_m['next_10h_avg_volatility'] = 0\n",
@@ -2710,7 +2710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2722,9 +2722,9 @@
     }
    ],
    "source": [
-    "# df_m.to_csv('NEAR_USDT_10h_avg_volatility_base.csv', index=False)\n",
+    "df_m.to_csv('NEAR_USDT_10h_avg_volatility_base.csv', index=False)\n",
     "\n",
-    "# print(\"DataFrame has been saved to csv\")"
+    "print(\"DataFrame has been saved to csv\")"
    ]
   },
   {
@@ -3267,7 +3267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "my-venv",
    "language": "python",
    "name": "python3"
   },
@@ -3281,7 +3281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
