--- a/03X_ST_IC/01_initial_back_test_SOLUSDT.ipynb
+++ b/03X_ST_IC/01_initial_back_test_SOLUSDT.ipynb
@@ -1557,7 +1557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Static Balance"
+    "## Static Balance"
    ]
   },
   {
