--- a/02_NEAR_USDT/06_forward_test_prediction.ipynb
+++ b/02_NEAR_USDT/06_forward_test_prediction.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ON PROGRESS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Read Data"
    ]
   },
