--- a/02_NEAR_USDT/05_backtest_prediction.ipynb
+++ b/02_NEAR_USDT/05_backtest_prediction.ipynb
@@ -845,7 +845,127 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>actual</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-10-24 02:00:00</td>\n",
+       "      <td>0.016921</td>\n",
+       "      <td>0.021196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-10-24 03:00:00</td>\n",
+       "      <td>0.017476</td>\n",
+       "      <td>0.032096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-10-24 04:00:00</td>\n",
+       "      <td>0.019363</td>\n",
+       "      <td>0.029004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-10-24 05:00:00</td>\n",
+       "      <td>0.019680</td>\n",
+       "      <td>0.024007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-10-24 06:00:00</td>\n",
+       "      <td>0.020091</td>\n",
+       "      <td>0.020913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36236</th>\n",
+       "      <td>2024-12-11 22:00:00</td>\n",
+       "      <td>0.017125</td>\n",
+       "      <td>0.017807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36237</th>\n",
+       "      <td>2024-12-11 23:00:00</td>\n",
+       "      <td>0.017017</td>\n",
+       "      <td>0.018303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36238</th>\n",
+       "      <td>2024-12-12 00:00:00</td>\n",
+       "      <td>0.017420</td>\n",
+       "      <td>0.019887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36239</th>\n",
+       "      <td>2024-12-12 01:00:00</td>\n",
+       "      <td>0.017177</td>\n",
+       "      <td>0.020122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36240</th>\n",
+       "      <td>2024-12-12 02:00:00</td>\n",
+       "      <td>0.015344</td>\n",
+       "      <td>0.022233</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>36241 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      date    actual  prediction\n",
+       "0      2020-10-24 02:00:00  0.016921    0.021196\n",
+       "1      2020-10-24 03:00:00  0.017476    0.032096\n",
+       "2      2020-10-24 04:00:00  0.019363    0.029004\n",
+       "3      2020-10-24 05:00:00  0.019680    0.024007\n",
+       "4      2020-10-24 06:00:00  0.020091    0.020913\n",
+       "...                    ...       ...         ...\n",
+       "36236  2024-12-11 22:00:00  0.017125    0.017807\n",
+       "36237  2024-12-11 23:00:00  0.017017    0.018303\n",
+       "36238  2024-12-12 00:00:00  0.017420    0.019887\n",
+       "36239  2024-12-12 01:00:00  0.017177    0.020122\n",
+       "36240  2024-12-12 02:00:00  0.015344    0.022233\n",
+       "\n",
+       "[36241 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -1351,6 +1471,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Write prediction to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>actual</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>safe_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-10-24 02:00:00</td>\n",
+       "      <td>0.016921</td>\n",
+       "      <td>0.021196</td>\n",
+       "      <td>0.015314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-10-24 03:00:00</td>\n",
+       "      <td>0.017476</td>\n",
+       "      <td>0.032096</td>\n",
+       "      <td>0.023189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-10-24 04:00:00</td>\n",
+       "      <td>0.019363</td>\n",
+       "      <td>0.029004</td>\n",
+       "      <td>0.020955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-10-24 05:00:00</td>\n",
+       "      <td>0.019680</td>\n",
+       "      <td>0.024007</td>\n",
+       "      <td>0.017345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-10-24 06:00:00</td>\n",
+       "      <td>0.020091</td>\n",
+       "      <td>0.020913</td>\n",
+       "      <td>0.015109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36236</th>\n",
+       "      <td>2024-12-11 22:00:00</td>\n",
+       "      <td>0.017125</td>\n",
+       "      <td>0.017807</td>\n",
+       "      <td>0.012865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36237</th>\n",
+       "      <td>2024-12-11 23:00:00</td>\n",
+       "      <td>0.017017</td>\n",
+       "      <td>0.018303</td>\n",
+       "      <td>0.013224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36238</th>\n",
+       "      <td>2024-12-12 00:00:00</td>\n",
+       "      <td>0.017420</td>\n",
+       "      <td>0.019887</td>\n",
+       "      <td>0.014368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36239</th>\n",
+       "      <td>2024-12-12 01:00:00</td>\n",
+       "      <td>0.017177</td>\n",
+       "      <td>0.020122</td>\n",
+       "      <td>0.014538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36240</th>\n",
+       "      <td>2024-12-12 02:00:00</td>\n",
+       "      <td>0.015344</td>\n",
+       "      <td>0.022233</td>\n",
+       "      <td>0.016063</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>36241 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      date    actual  prediction  safe_prediction\n",
+       "0      2020-10-24 02:00:00  0.016921    0.021196         0.015314\n",
+       "1      2020-10-24 03:00:00  0.017476    0.032096         0.023189\n",
+       "2      2020-10-24 04:00:00  0.019363    0.029004         0.020955\n",
+       "3      2020-10-24 05:00:00  0.019680    0.024007         0.017345\n",
+       "4      2020-10-24 06:00:00  0.020091    0.020913         0.015109\n",
+       "...                    ...       ...         ...              ...\n",
+       "36236  2024-12-11 22:00:00  0.017125    0.017807         0.012865\n",
+       "36237  2024-12-11 23:00:00  0.017017    0.018303         0.013224\n",
+       "36238  2024-12-12 00:00:00  0.017420    0.019887         0.014368\n",
+       "36239  2024-12-12 01:00:00  0.017177    0.020122         0.014538\n",
+       "36240  2024-12-12 02:00:00  0.015344    0.022233         0.016063\n",
+       "\n",
+       "[36241 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 1: Calculate MAPE\n",
+    "expanding_results['mape'] = (abs(expanding_results['actual'] - expanding_results['prediction']) / expanding_results['actual']) * 100\n",
+    "\n",
+    "# Step 2: Calculate the Mean Absolute Percentage Error (MAPE) across all rows\n",
+    "mape_value = expanding_results['mape'].mean()\n",
+    "\n",
+    "# Step 3: Calculate the 'safe_prediction' column\n",
+    "expanding_results['safe_prediction'] = expanding_results['prediction'] * (100 - mape_value) / 100\n",
+    "\n",
+    "# Step 4: Drop the 'mape' column\n",
+    "expanding_results = expanding_results.drop(columns=['mape'])\n",
+    "\n",
+    "expanding_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write the DataFrame to a CSV file\n",
+    "expanding_results.to_csv('backtest_volatility_prediction_expanding.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Evaluation Functions"
    ]
   },
@@ -1649,16 +1939,6 @@
    ],
    "source": [
     "evaluate_baseline(chronological_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Write the DataFrame to a CSV file\n",
-    "# sliding_results_df.to_csv('backtest_volatility_prediction_2021.csv', index=False)"
    ]
   },
   {
