--- a/02_NEAR_USDT/02_base_model.ipynb
+++ b/02_NEAR_USDT/02_base_model.ipynb
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2198,7 +2198,7 @@
        "[36461 rows x 10 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2466,7 +2466,7 @@
        "[36457 rows x 12 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3013,7 +3013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use current 4h avg volatility as the next 4h avg volatility"
+    "## Use current 4h avg volatility as the next 4h avg volatility"
    ]
   },
   {
