--- a/02_NEAR_USDT/03_2_features_selection_1h.ipynb
+++ b/02_NEAR_USDT/03_2_features_selection_1h.ipynb
@@ -534,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_746299/3230499982.py:65: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/tmp/ipykernel_746299/1552945273.py:65: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df_features['session_volatility'] = df_features.groupby('session')['volatility'].transform('mean')\n"
      ]
     },
@@ -586,7 +586,7 @@
        "      <th>bollinger_lower_200</th>\n",
        "      <th>bollinger_width_200</th>\n",
        "      <th>ohlc_ratio</th>\n",
-       "      <th>ohlc_ratio_avg</th>\n",
+       "      <th>mean_distance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -612,7 +612,7 @@
        "      <td>0.571483</td>\n",
        "      <td>0.497481</td>\n",
        "      <td>0.248485</td>\n",
-       "      <td>0.349160</td>\n",
+       "      <td>-0.00180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
@@ -636,7 +636,7 @@
        "      <td>0.572430</td>\n",
        "      <td>0.491421</td>\n",
        "      <td>0.560372</td>\n",
-       "      <td>0.473868</td>\n",
+       "      <td>-0.00510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>201</th>\n",
@@ -660,7 +660,7 @@
        "      <td>0.573572</td>\n",
        "      <td>0.485008</td>\n",
        "      <td>0.233161</td>\n",
-       "      <td>0.433257</td>\n",
+       "      <td>0.00220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>202</th>\n",
@@ -684,7 +684,7 @@
        "      <td>0.575680</td>\n",
        "      <td>0.476259</td>\n",
        "      <td>0.166667</td>\n",
-       "      <td>0.302171</td>\n",
+       "      <td>0.00045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>203</th>\n",
@@ -708,7 +708,7 @@
        "      <td>0.577432</td>\n",
        "      <td>0.468624</td>\n",
        "      <td>0.849624</td>\n",
-       "      <td>0.452456</td>\n",
+       "      <td>0.00050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -756,7 +756,7 @@
        "      <td>6.233928</td>\n",
        "      <td>2.187133</td>\n",
        "      <td>0.532468</td>\n",
-       "      <td>0.305614</td>\n",
+       "      <td>0.00500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36456</th>\n",
@@ -780,7 +780,7 @@
        "      <td>6.232889</td>\n",
        "      <td>2.187522</td>\n",
        "      <td>0.990196</td>\n",
-       "      <td>0.470810</td>\n",
+       "      <td>-0.00050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36457</th>\n",
@@ -804,7 +804,7 @@
        "      <td>6.231505</td>\n",
        "      <td>2.188060</td>\n",
        "      <td>0.405405</td>\n",
-       "      <td>0.494036</td>\n",
+       "      <td>0.01900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36458</th>\n",
@@ -828,7 +828,7 @@
        "      <td>6.229805</td>\n",
        "      <td>2.189440</td>\n",
        "      <td>0.822222</td>\n",
-       "      <td>0.687573</td>\n",
+       "      <td>-0.00500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36459</th>\n",
@@ -852,7 +852,7 @@
        "      <td>6.227289</td>\n",
        "      <td>2.191281</td>\n",
        "      <td>0.292453</td>\n",
-       "      <td>0.627569</td>\n",
+       "      <td>-0.02450</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -912,23 +912,23 @@
        "36458     492234882.0             8.419245             6.229805   \n",
        "36459     492814685.0             8.418571             6.227289   \n",
        "\n",
-       "       bollinger_width_200  ohlc_ratio  ohlc_ratio_avg  \n",
-       "199               0.497481    0.248485        0.349160  \n",
-       "200               0.491421    0.560372        0.473868  \n",
-       "201               0.485008    0.233161        0.433257  \n",
-       "202               0.476259    0.166667        0.302171  \n",
-       "203               0.468624    0.849624        0.452456  \n",
-       "...                    ...         ...             ...  \n",
-       "36455             2.187133    0.532468        0.305614  \n",
-       "36456             2.187522    0.990196        0.470810  \n",
-       "36457             2.188060    0.405405        0.494036  \n",
-       "36458             2.189440    0.822222        0.687573  \n",
-       "36459             2.191281    0.292453        0.627569  \n",
+       "       bollinger_width_200  ohlc_ratio  mean_distance  \n",
+       "199               0.497481    0.248485       -0.00180  \n",
+       "200               0.491421    0.560372       -0.00510  \n",
+       "201               0.485008    0.233161        0.00220  \n",
+       "202               0.476259    0.166667        0.00045  \n",
+       "203               0.468624    0.849624        0.00050  \n",
+       "...                    ...         ...            ...  \n",
+       "36455             2.187133    0.532468        0.00500  \n",
+       "36456             2.187522    0.990196       -0.00050  \n",
+       "36457             2.188060    0.405405        0.01900  \n",
+       "36458             2.189440    0.822222       -0.00500  \n",
+       "36459             2.191281    0.292453       -0.02450  \n",
        "\n",
        "[34750 rows x 65 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,8 @@
     "# OHLC Ratio\n",
     "df_features['ohlc_ratio'] = abs(df_features['openprice'] - df_features['closeprice']) / (df_features['highprice'] - df_features['lowprice'])\n",
     "\n",
-    "df_features['ohlc_ratio_avg'] = df_features['ohlc_ratio'].rolling(window=4).mean()\n",
+    "# Tail ratio\n",
+    "df_features['mean_distance'] = (df_features['lowprice'] + df_features['highprice']) / 2- (df_features['openprice'] + df_features['closeprice']) / 2\n",
     "\n",
     "df_features.dropna(inplace=True)\n",
     "df_features"
@@ -1933,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1975,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Overall Median Absolute Error</th>\n",
-       "      <td>0.004074</td>\n",
+       "      <td>0.004089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Overall Variance Absolute Error</th>\n",
@@ -1982,31 +1983,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mean Error</th>\n",
-       "      <td>0.000174</td>\n",
+       "      <td>0.000193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mean Absolute Error</th>\n",
-       "      <td>0.005827</td>\n",
+       "      <td>0.005831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mean Absolute Percentage Error</th>\n",
-       "      <td>36.795617</td>\n",
+       "      <td>36.874353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mean Percentage Error</th>\n",
-       "      <td>-18.493215</td>\n",
+       "      <td>-18.653343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Root Mean Squared Error</th>\n",
-       "      <td>0.008921</td>\n",
+       "      <td>0.008922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>R-squared</th>\n",
-       "      <td>0.384751</td>\n",
+       "      <td>0.384587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Min-Max Error</th>\n",
-       "      <td>0.092514</td>\n",
+       "      <td>0.092289</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2015,18 +2016,18 @@
       "text/plain": [
        "                                         0\n",
        "train_ratio                       0.930000\n",
-       "Overall Median Absolute Error     0.004074\n",
+       "Overall Median Absolute Error     0.004089\n",
        "Overall Variance Absolute Error   0.000046\n",
-       "Mean Error                        0.000174\n",
-       "Mean Absolute Error               0.005827\n",
-       "Mean Absolute Percentage Error   36.795617\n",
-       "Mean Percentage Error           -18.493215\n",
-       "Root Mean Squared Error           0.008921\n",
-       "R-squared                         0.384751\n",
-       "Min-Max Error                     0.092514"
+       "Mean Error                        0.000193\n",
+       "Mean Absolute Error               0.005831\n",
+       "Mean Absolute Percentage Error   36.874353\n",
+       "Mean Percentage Error           -18.653343\n",
+       "Root Mean Squared Error           0.008922\n",
+       "R-squared                         0.384587\n",
+       "Min-Max Error                     0.092289"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
