--- a/03X_ST_IC/04_stacked_supertrend_strat.ipynb
+++ b/03X_ST_IC/04_stacked_supertrend_strat.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add Super Trend Indicator"
+    "# Super Trend Indicator Function"
    ]
   },
   {
@@ -252,6 +252,13 @@
     "        df.fillna(method=kwargs[\"fill_method\"], inplace=True)\n",
     "\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 Stacked Super Trend"
    ]
   },
   {
@@ -2268,6 +2275,13 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=12)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 Stacked Super Trend"
    ]
   },
   {
