--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -1456,24 +1456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def handle_trading_action(df, prev_action=None):\n",
+    "def handle_trading_action(suggested_action, prev_action=prev_action):\n",
     "    \"\"\"\n",
-    "    Handles trading actions based on the suggested action derived from the DataFrame.\n",
+    "    Handles trading actions based on the suggested action.\n",
     "\n",
     "    Parameters:\n",
-    "        df (DataFrame): The DataFrame containing the necessary columns.\n",
+    "        suggested_action (str): The suggested action ('Long', 'Short', or None).\n",
     "        prev_action (str, optional): The previous action. Defaults to None.\n",
     "\n",
     "    Returns:\n",
     "        tuple: A tuple containing the current action and the updated previous action.\n",
     "    \"\"\"\n",
-    "    # Function to determine the suggested action\n",
-    "    suggested_action = determine_suggested_action(df)\n",
-    "    \n",
     "    print(f\"Previous Action: {prev_action}\")\n",
     "    print(f\"Suggested Action: {suggested_action}\")\n",
     "    \n",
@@ -1483,7 +1480,7 @@
     "    # Action handling logic\n",
     "    if prev_action == suggested_action:\n",
     "        pass  # Do nothing if the action is the same\n",
-    "    elif prev_action != suggested_action:\n",
+    "    else:\n",
     "        if prev_action is None and suggested_action == 'Long':\n",
     "            curr_action = 'Open Long'\n",
     "            print(f'Open a Long Position: {curr_action}')\n",
@@ -1514,13 +1511,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous Action: None\n",
+      "Suggested Action: None\n",
+      "Current Action: No action taken\n",
+      "New Previous Action: None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example usage\n",
-    "prev_action = None  # Initial value for previous action\n",
-    "current_action, new_prev_action = handle_trading_action(df, prev_action)"
+    "current_action, new_prev_action = handle_trading_action(suggested_action, prev_action)"
    ]
   }
  ],
